# ChangeLog for net-misc/vnc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/vnc/ChangeLog,v 1.23 2003/12/01 21:58:57 weeve Exp $

  01 Dec 2003; Jason Wever <weeve@gentoo.org> vnc-3.3.7.ebuild:
  Marked stable on sparc.

  21 Nov 2003; Daniel Ahlberg <aliz@gentoo.org> vnc-3.3.7.ebuild :
  Copied patch from tightvnc that fixes compilation if /tmp is set noexec. Closing #22356.

  09 Jun 2003; Jason Wever <weeve@gentoo.org> vnc-3.3.3-r2.ebuild,
  vnc-3.3.3-r3.ebuild, vnc-3.3.4.ebuild, vnc-3.3.5-r1.ebuild,
  vnc-3.3.5.ebuild, vnc-3.3.6-r1.ebuild, vnc-3.3.6.ebuild, vnc-3.3.7.ebuild,
  files/vnc-3.3.3-10-xdm-auth-support.patch,
  files/vnc-3.3.3r2-getline-fix.patch, files/vnc-3.3.4-platform-fixes.patch:
  Added a couple patches from debian to make vnc-3.3.7 build and display
  correctly on sparc. Marked all other vnc ebuilds as -sparc.

*vnc-3.3.7 (24 Mar 2003)

  19 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Disable Xvnc for ppc building and remove -ppc.
  
  04 May 2003; Daniel Ahlberg <aliz@gentoo.org> vnc-3.3.7.ebuild :
  Do not allow tightvnc and vnc to be installed at the same time as they
  overwrite each others files. Closes #15152.

  24 Mar 2003; Patrick Kursawe <phosphan@gentoo.org> vnc-3.3.7.ebuild,
  files/digest-vnc-3.3.7, files/vnc-3.3.7-gentoo.security.patch:
  Version bump. 

*vnc-3.3.6-r1 (21 Feb 2003)

  21 Feb 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Security update.

*vnc-3.3.6 (11 Dec 2002)

  21 Dec 2002; Nick Hadaway <raker@gentoo.org> vnc-3.3.6.ebuild :
  Added CFLAGS fix from 3.3.5-r1.  Closes bug #12024

  11 Dec 2002; Brad Cowan <bcowan@gentoo.org> vnc-3.3.6.ebuild,
  files/digest-vnc-3.3.6:
  Version bump.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*vnc-3.3.5-r1 (27 Nov 2002)

  29 Nov 2002; Nick Hadaway <raker@gentoo.org> vnc-3.3.5-r1.ebuild :
  Marked stable.
