@@ -1,8 +1,8 @@
-MD5 b822583c88adecea48af183d5e0571ff ChangeLog 4849
-MD5 1e4c4c14f05f39bd6f7374b0591ee56d vnc-3.3.7.ebuild 1609
-MD5 b801cfcb63f9c7c9299dd4919ba332b9 files/vnc-3.3.7-imake-tmpdir.patch 956
+MD5 8589c282b160ccf130d865ae3173be8b ChangeLog 5121
+MD5 882e53ee17ec1e0947c5d7b544d5fa35 vnc-3.3.7.ebuild 1642
 MD5 34d3a675951dc585f220fe946a5985df files/digest-vnc-3.3.7 70
 MD5 a30c29b08a93f6fb42177887aa132e18 files/vnc-3.3.3-10-xdm-auth-support.patch 11575
 MD5 80e10f3892c66ccd2442eda86402e9b4 files/vnc-3.3.3r2-getline-fix.patch 1205
 MD5 69dfbaa72c6b66cba94868885c09fc92 files/vnc-3.3.4-platform-fixes.patch 63005
 MD5 28351e92e98f2a72662d937ce2889d14 files/vnc-3.3.7-gentoo.security.patch 781
+MD5 b801cfcb63f9c7c9299dd4919ba332b9 files/vnc-3.3.7-imake-tmpdir.patch 956
